# talesofvalor_python

./: .envrc  .gitignore  DEVELOPMENT.md  Pipfile  README.md  envrc_template  fabfile.py  fabric.yml  gulpfile.js  manage.py  package-lock.json  package.json  passenger_wsgi.py  project.db  pyproject.toml  requirements.txt
static/css/: main.css
static/js/: main.js
static/sass/: main.scss
static_global/css/: main.css
static_global/js/: main.js
static_global/js_source/: jquery.selection_save.js  scripts.js
static_global/sass/: main.scss
static_source/sass/: main.scss
talesofvalor/: __init__.py  context_processors.py  mixins.py  urls.py  wsgi.py
talesofvalor/attendance/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
talesofvalor/betweengameabilities/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
talesofvalor/betweengameskills/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
talesofvalor/charactermessages/: __init__.py  admin.py  apps.py  models.py
talesofvalor/characters/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
talesofvalor/comments/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
talesofvalor/events/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
talesofvalor/origins/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
talesofvalor/players/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
talesofvalor/registration/: __init__.py  apps.py  (+3 more)
(+298 files in other folders)
