[tool.poetry]
name = "talesofvalor"
version = "0.1.0"
description = "Character and Game database for the Tales of Valor: Fellowship game."
authors = ["Rob Archer <rob@crowbringsdaylight.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-cms = "^3.9.0"
fabric = "^2.6.0"
wiki = "^0.7.10"
djangocms-text-ckeditor = "^4.0.0"
djangocms-file = "^3.0.0"
djangocms-picture = "^3.0.0"
djangocms-link = "^3.0.0"
djangocms-style = "^3.0.0"
djangocms-snippet = "^3.0.0"
djangocms-video = "^3.0.0"
djangorestframework = "^3.13.1"
django-taggit = "^2.0.0"
django-taggit-autosuggest = "^0.3.8"
djangocms-page-tags = "^0.9.0"
django-paypal = "^1.1.2"
mysqlclient = "^2.1.0"
paypal-checkout-serversdk = "^1.0.1"
selenium = "^4.1.0"
mailosaur = "^7.9.0"
autopep8 = "^1.6.0"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
